Issues with reselecting the category of part in the UpdatePart window.

--- a/MP-MMS.WPF/Views/Windows/AddPart.xaml
+++ b/MP-MMS.WPF/Views/Windows/AddPart.xaml
@@ -67,7 +67,7 @@
 
                 <StackPanel Grid.Column="0"
                              Margin="5 0">
-                    <Label Content="Cost per Unit (₦)"/>
+                    <Label Content="Unit Cost (₦)"/>
                     <Syncfusion:IntegerTextBox x:Name="txtCostPerUnit"/>
                 </StackPanel>
 
