--- a/MP-MMS.WPF/Views/Pages/PartsPage.xaml
+++ b/MP-MMS.WPF/Views/Pages/PartsPage.xaml
@@ -118,7 +118,9 @@
                                                 Width="30"
                                                 Margin="5 0"
                                                 BorderThickness="0"
-                                                Background="#568CD9">
+                                                Background="#568CD9"
+                                                x:Name="UpdatePart"
+                                                Click="UpdatePart_Click">
                                             <Image  Source="/Images/pagesicons/edit.png"
                                                     Style="{StaticResource ButtonIconsStyle}"/>
                                         </Button>
@@ -126,7 +128,9 @@
                                                 Width="30"
                                                 Margin="5 0"
                                                 BorderThickness="0"
-                                                Background="#F44336">
+                                                Background="#F44336"
+                                                x:Name="DeletePart"
+                                                Click="DeletePart_Click">
                                             <Image  Source="/Images/pagesicons/delete.png"
                                                     Style="{StaticResource ButtonIconsStyle}"/>
                                         </Button>
