--- a/MP-MMS.WPF/Views/Pages/IssuesPage.xaml
+++ b/MP-MMS.WPF/Views/Pages/IssuesPage.xaml
@@ -83,8 +83,8 @@
                 <GridView>
                     <GridView.Columns>
                         <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="150"/>
-                        <GridViewColumn Header="Part" DisplayMemberBinding="{Binding PartId}" Width="150"/>
-                        <GridViewColumn Header="Assigned To" DisplayMemberBinding="{Binding EmployeeId}" Width="150"/>
+                        <GridViewColumn Header="Part" DisplayMemberBinding="{Binding Part}" Width="150"/>
+                        <GridViewColumn Header="Assigned To" DisplayMemberBinding="{Binding Employee}" Width="150"/>
                         <GridViewColumn Header="Priority" DisplayMemberBinding="{Binding Priority}" Width="150"/>
                         <GridViewColumn Header="Due Date" DisplayMemberBinding="{Binding DueDate, StringFormat='{}{0:dd/MM/yyyy}'}" Width="150"/>
                         <GridViewColumn Header="Completed" Width="150">
