--- a/MP-MMS.WPF/Views/Pages/HomeDashboard.xaml
+++ b/MP-MMS.WPF/Views/Pages/HomeDashboard.xaml
@@ -2,77 +2,113 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MP_MMS.WPF.Views.Pages" xmlns:Syncfusion="http://schemas.syncfusion.com/wpf" xmlns:chart="clr-namespace:Syncfusion.UI.Xaml.Charts;assembly=Syncfusion.SfChart.WPF"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="clr-namespace:MP_MMS.WPF.Views.Pages" xmlns:chart="clr-namespace:Syncfusion.UI.Xaml.Charts;assembly=Syncfusion.SfChart.WPF" xmlns:vm="clr-namespace:MP_MMS.WPF.LiveChart"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="HomeDashboard">
 
+    <Page.Resources>
+        <vm:ViewModel x:Key="vm"/>
+    </Page.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-            <Grid Grid.Row="0">
+        <!--Upper Controls Section-->
+        <Grid Grid.Row="0" DataContext="{StaticResource vm}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="400"/>
             </Grid.ColumnDefinitions>
-            <chart:BarSeries YAxis="{Binding UnitCost}" x:Name="barChart"/>   
-            <Syncfusion:CalendarEdit Grid.Column="1" Margin="30"/>
-            </Grid>
 
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+            <!--Chart-->
+            <chart:SfChart Header="Sales Record">
+                <chart:SfChart.PrimaryAxis>
+                    <chart:CategoryAxis/>
+                </chart:SfChart.PrimaryAxis>
+                <chart:SfChart.SecondaryAxis>
+                    <chart:NumericalAxis/>
+                </chart:SfChart.SecondaryAxis>
+                <!--Legends-->
+                <chart:SfChart.Legend>
+                    <chart:ChartLegend/>
+                </chart:SfChart.Legend>
+                
+                <!--Binding to data-->
+                <chart:ColumnSeries Palette="Elite" ShowTooltip="True" Label="Product A" ItemsSource="{Binding Data}" XBindingPath="Year" YBindingPath="ProductA">
+                    <chart:ColumnSeries.AdornmentsInfo>
+                        <chart:ChartAdornmentInfo ShowLabel="True"/>
+                    </chart:ColumnSeries.AdornmentsInfo>
+                </chart:ColumnSeries>
+                <chart:ColumnSeries Palette="SandyBeach" ShowTooltip="True" Label="Product B" ItemsSource="{Binding Data}" XBindingPath="Year" YBindingPath="ProductB">
+                    <chart:ColumnSeries.AdornmentsInfo>
+                        <chart:ChartAdornmentInfo ShowLabel="True"/>
+                    </chart:ColumnSeries.AdornmentsInfo>
+                </chart:ColumnSeries>
+            </chart:SfChart>
 
-                <Button Grid.Column="0"
-                    Background="{StaticResource BrushPrimaryColour1}"
-                    Margin="30">
-                    <StackPanel VerticalAlignment="Center"
-                        HorizontalAlignment="Center">
-                        <TextBlock Text="0"
-                           Foreground="White"
-                           FontSize="80"
-                           HorizontalAlignment="Center"/>
-                        <TextBlock Text="Machine Parts"
-                           Foreground="White"
-                           HorizontalAlignment="Center"/>
-                    </StackPanel>
-                </Button>
-                <Button Grid.Column="1"
-                    Background="{StaticResource BrushPrimaryColour1}"
-                    Margin="30">
-                    <StackPanel VerticalAlignment="Center"
-                        HorizontalAlignment="Center">
-                        <TextBlock Text="0"
-                           Foreground="White"
-                           FontSize="80"
-                           HorizontalAlignment="Center"/>
-                        <TextBlock Text="Open Issues"
-                           Foreground="White"
-                           HorizontalAlignment="Center"/>
-                    </StackPanel>
-                </Button>
-
-                <Button Grid.Column="2"
-                    Background="{StaticResource BrushPrimaryColour1}"
-                    Margin="30">
-                    <StackPanel VerticalAlignment="Center"
-                        HorizontalAlignment="Center">
-                        <TextBlock Text="0"
-                           Foreground="White"
-                           FontSize="80"
-                           HorizontalAlignment="Center"/>
-                        <TextBlock Text="Users"
-                           Foreground="White"
-                           HorizontalAlignment="Center"/>
-                    </StackPanel>
-                </Button>
-            </Grid>
+            <!--Events Region-->
+            <StackPanel Grid.Column="1" Margin="20" Background="White">
+                <TextBlock Text="Events" Foreground="{StaticResource BrushPrimaryColour2}" Margin="10" FontWeight="Bold"/>
+            </StackPanel>
+            
         </Grid>
+
+        <!--Lower Controls Section-->
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Column="0"
+                    Background="{StaticResource BrushPrimaryColour1}"
+                    Margin="30">
+                <StackPanel VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
+                    <TextBlock Text="0"
+                           Foreground="White"
+                           FontSize="80"
+                           HorizontalAlignment="Center"/>
+                    <TextBlock Text="Machine Parts"
+                           Foreground="White"
+                           HorizontalAlignment="Center"/>
+                </StackPanel>
+            </Button>
+            <Button Grid.Column="1"
+                    Background="{StaticResource BrushPrimaryColour1}"
+                    Margin="30">
+                <StackPanel VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
+                    <TextBlock Text="0"
+                           Foreground="White"
+                           FontSize="80"
+                           HorizontalAlignment="Center"/>
+                    <TextBlock Text="Open Issues"
+                           Foreground="White"
+                           HorizontalAlignment="Center"/>
+                </StackPanel>
+            </Button>
+
+            <Button Grid.Column="2"
+                    Background="{StaticResource BrushPrimaryColour1}"
+                    Margin="30">
+                <StackPanel VerticalAlignment="Center"
+                        HorizontalAlignment="Center">
+                    <TextBlock Text="0"
+                           Foreground="White"
+                           FontSize="80"
+                           HorizontalAlignment="Center"/>
+                    <TextBlock Text="Users"
+                           Foreground="White"
+                           HorizontalAlignment="Center"/>
+                </StackPanel>
+            </Button>
+        </Grid>
+    </Grid>
 </Page>
