--- a/MP-MMS.WPF/Views/LoginWindow.xaml
+++ b/MP-MMS.WPF/Views/LoginWindow.xaml
@@ -5,44 +5,62 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MP_MMS.WPF.Views"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="287" Width="320" Background="{StaticResource BrushPrimaryColour1}">
-    <Grid Margin="30">
+        Title="LoginWindow" Height="287" Width="320" 
+        WindowStyle="None" ResizeMode="NoResize"
+        Background="{StaticResource BrushPrimaryColour1}"
+        WindowStartupLocation="CenterScreen">
+    <Grid Margin="30" VerticalAlignment="Center">
         <StackPanel>
-        <StackPanel Orientation="Horizontal" Margin="0 0 0 10">
+            <DockPanel>
+        <StackPanel Orientation="Horizontal" DockPanel.Dock="Left" >
                 <Image Source="\images\repair.png" 
                            VerticalAlignment="Center"
-                           Height="30"
-                           Margin="0"/>
+                           Height="20"/>
                 <Label Content="MP-MMS" 
                            Foreground="White" 
                            Grid.Row="0" 
-                           FontSize="25" 
+                           FontSize="15" 
                            FontWeight="Bold"
                            FontFamily=" Arial"
                            VerticalContentAlignment="Center"/>
-        </StackPanel>
+
+                </StackPanel>
+                <Syncfusion:ButtonAdv x:Name="CloseAppBtn" SizeMode="Small"
+                                      DockPanel.Dock="Right"
+                                  Background="#F44336"
+                                  SmallIcon="\Images\cancel.png"
+                                      Height="30"
+                                      Width="30"
+                                      HorizontalAlignment="Right"
+                                      Margin="5 0" Click="CloseAppBtn_Click"/>
+            </DockPanel>
+            <Label Content="" FontSize="12" x:Name="ErrorText" FontStyle="Italic" Foreground="#F44336" HorizontalAlignment="Center"/>
             <Label Content="User Name"
                    Foreground="White" 
                            Grid.Row="0" 
                            FontSize="13" 
                            FontFamily=" Arial"/>
-            <Syncfusion:SfTextBoxExt Watermark="Admin1"  Margin="5 0"/>
+            <Syncfusion:SfTextBoxExt Watermark="Admin1"  Margin="5 0"
+                                     x:Name="UsernameTxt"/>
             <Label Content="Password"
                    Foreground="White" 
                            Grid.Row="0" 
                            FontSize="13" 
                            FontFamily=" Arial"/>
-            <PasswordBox Margin="5 0"/>
+            <PasswordBox Margin="5 0"
+                         x:Name="PasswordTxt"/>
 
-            <Syncfusion:ButtonAdv Label="Submit" 
-                                  Margin="5 10"
+            <Syncfusion:ButtonAdv x:Name="SubmitBtn" Label="Submit" 
+                                  Margin="5 15"
                                   Foreground="White"
                                   Background="{StaticResource BrushPrimaryColour2}"
                                   SmallIcon="\Images\enter.png"
-                                  Height="30"/>
+                                  Height="30" 
+                                  Click="SubmitBtn_Click"
+                                  IsDefault="True"/>
             <Label Content="© Polyteric Systems 2022" 
                            Grid.Row="1" 
-                           FontSize="8"
+                           FontSize="10"
                            HorizontalAlignment="Right"
                            Foreground="White"
                            FontWeight="ExtraLight"/>
