--- a/MP-MMS.WPF/Views/MainWindow.xaml
+++ b/MP-MMS.WPF/Views/MainWindow.xaml
@@ -8,7 +8,8 @@
         mc:Ignorable="d"
         Title="MainWindow" 
         Height="700" Width="1000"
-        Background="{StaticResource BrushPrimaryColour3}">
+        Background="{StaticResource BrushPrimaryColour3}"
+        ResizeMode="CanMinimize">
 
     <Grid>
         <Grid.RowDefinitions>
