--- a/MP-MMS.WPF/Views/Pages/HomeDashboard.xaml
+++ b/MP-MMS.WPF/Views/Pages/HomeDashboard.xaml
@@ -23,14 +23,14 @@
             </Grid.ColumnDefinitions>
 
             <!--Chart-->
-            <Border CornerRadius="10" Background="White" >
+            <Border CornerRadius="10" Background="White">
                 <chart:SfChart x:Name="PieChartDisplay" Margin="10">
                 </chart:SfChart>
             </Border>
 
             <!--Events Region-->
-            <StackPanel Grid.Column="1">
-                <TextBlock Text="Events" Foreground="{StaticResource BrushPrimaryColour2}" Margin="10" FontWeight="Bold"/>
+            <StackPanel Grid.Column="1" Margin="30">
+                <TextBlock Text="Events" Foreground="{StaticResource BrushPrimaryColour2}" FontWeight="Bold" FontSize="15"/>
             </StackPanel>
 
         </Grid>
