--- a/MP-MMS.WPF/Views/MainWindow.xaml
+++ b/MP-MMS.WPF/Views/MainWindow.xaml
@@ -124,7 +124,8 @@
                 </Button>
 
                 <Button Style="{StaticResource ButtonStyle}"
-                        Click="UsersPage_Click">
+                        Click="UsersPage_Click"
+                        x:Name="usersButton">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -142,7 +143,8 @@
                 </Button>
 
                 <Button Style="{StaticResource ButtonStyle}"
-                        Click="Locations_Click">
+                        Click="Locations_Click"
+                        x:Name="locationsButton">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
